@@ -67,6 +67,7 @@ lib/gecoder/interface/constraints/set/connection.rb -text
 lib/gecoder/interface/constraints/set/domain.rb -text
 lib/gecoder/interface/constraints/set/relation.rb -text
 lib/gecoder/interface/constraints/set_enum/channel.rb -text
+lib/gecoder/interface/constraints/set_enum/distinct.rb -text
 lib/gecoder/interface/constraints/set_enum_constraints.rb -text
 lib/gecoder/interface/constraints/set_var_constraints.rb -text
 lib/gecoder/interface/enum_matrix.rb -text
